@@ -221,7 +221,8 @@ optionally compressed by
 and ideally indexed by
 .B samtools
 .BR faidx .
-If an index is not present, one will be generated for you.
+If an index is not present one will be generated for you, if the reference
+file is local.
 .TP
 .BI "-L " FILE
 Only output alignments overlapping the input BED
